# jenplane

./: .gitignore  Jenplane-Process.ttl  README.md  angular.json  app.js  databrix-1.ttl  package-lock.json  package.json
_helpers/: user-permissions.js  utils.js
code/jenplane-backend/: .coveragerc  README.md  pyproject.toml
code/jenplane-backend/jenplane_backend/: app.py  rest_api.py
code/jenplane-backend/jenplane_backend/adapters/input/rest_api/: dependencies.py  organizations.py  settings.py
code/jenplane-backend/jenplane_backend/adapters/output/: example_repository.py  mongo_db.py  organizations.py
code/jenplane-backend/jenplane_backend/api/: example_usecase.py  organizations.py
code/jenplane-backend/jenplane_backend/domain/: example_service.py  organization.py  organization_service.py
code/jenplane-backend/jenplane_backend/spi/: example_repository.py  organizations.py
code/jenplane-backend/tests/: test_app.py  test_rest_api.py
code/jenplane-backend/tests/adapters/input/rest_api/: test_organizations_router.py
code/jenplane-backend/tests/adapters/output/: test_mongo_db_connection_provider.py
code/src/backend/: Dockerfile  app.py  default.env  requirements.txt
code/src/docker/: Dockerfile  docker-compose.yml
code/src/frontend/: Dockerfile  config-overrides.js  package-lock.json  package.json
config/: database.js  passport.js
docs/: paper_46.docx
models/: Organization.js  Project.js  Resource.js  User.js
routes/: index.js
routes/api/: index.js
src/: index.html  styles.css
src/app/: app.component.html  app.module.ts
(+133 files in other folders)
