[tool.poetry]
name = "jenplane-backend"
version = "0.1.0"
description = ""
authors = ["Manuel Prinz <manuel@pinguinkiste.de>"]
readme = "README.md"
packages = [{include = "jenplane_backend"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
