[tool.poetry]
name = "jenplane-backend"
version = "0.1.0"
description = ""
authors = ["Manuel Prinz <manuel@pinguinkiste.de>"]
readme = "README.md"
packages = [{include = "jenplane_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
