[tool.poetry]
name = "jenplane-backend"
version = "0.1.0"
description = ""
authors = ["Manuel Prinz <manuel.prinz@tib.eu>"]
readme = "README.md"
packages = [{include = "jenplane_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
pymongo = "^4.3.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
httpx = "^0.23.1"
pytest-fastapi-deps = "^0.2.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
